<resources>
    <string name="app_name">언제모임</string>
    <string name="dialog_base_ok">확인</string>

    //login
    <string name="kakao_app_key">d04b5837217105d4b2a2b16ced721572</string>

    //main
    <string name="main_make_moim">모임 생성</string>
    <string name="main_view_moim">모임 조회</string>
    <string name="main_user_moim">개인 페이지</string>
    <string name="main_join_moim">모임 참가</string>

    //join moim
    <string name="join_moimIdx">모임 번호</string>
    <string name="join_moimPw">비밀번호</string>

    <string name="join_moim_info">숫자만 입력</string>

    //make moim
    <string name="make_moim_name">모임 이름</string>
    <string name="make_moim_explain">모임 설명을 입력해 주세요!</string>
    <string name="make_moim_date">날짜를 선택해 주세요!</string>
    <string name="make_moim_time">시간을 선택해 주세요!</string>
    <string name="make_moim_setting">상세 설정</string>
    <string name="make_moim">모임 생성</string>

    //dialog_participants
    <string name="participants_title">모임 참가자 목록</string>
    <string name="participants_no_msg">참가자가 없습니다.</string>

    //dialog_date
    //dialog_time
    <string name="time_title">모임 시간 선택</string>
    <string name="time_since">시 부터</string>
    <string name="time_until">시 까지</string>
    <string name="start_time">Start Time</string>
    <string name="finish_time">Finish Time</string>
    <string name="time_AM">오전</string>
    <string name="time_PM">오후</string>

    //base
    <string name="complete">완료</string>
    <string name="topbar_title">상단바</string>

    //choice
    <string name="choice_like">선호</string>
    <string name="choice_possible">가능</string>
    <string name="choice_dislike">비선호</string>
    <string name="choice_impossible">불가능</string>

    //view_moim
    <string name="nonMoim_msg">현재 참가중인 모임이 없습니다.\n여기를 눌러 모임을 생성해보세요.</string>

    //moim_personal
    <string name="personal_load">불러오기</string>
    <string name="personal_notice">선택하지 않으면 기본 선택은 \'가능\'이 됩니다.</string>
    <string name="personal_reset">시간표 초기화</string>
    <string name="personal_choice">Choice</string>
</resources>