<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--상단바 제거띠
    <include
        android:id="@+id/make_moim_topbar_layout"
        layout="@layout/layout_topbar"
        />
    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <EditText
            android:id="@+id/make_moim_title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/make_moim_name"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/make_moim_explain_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/make_moim_explain"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/make_moim_textCount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:text="0 / 200"
                android:textSize="10sp"
                android:textColor="@color/whiteGray"
                app:layout_constraintTop_toBottomOf="@id/make_moim_explain_et"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/make_moim_select_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_moim_date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />

            <Button
                android:id="@+id/make_moim_select_date_btn"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_base_main_stroke_btn"

                android:text="날짜 선택"
                android:textSize="16sp"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                android:gravity="center"
                />
            <TableLayout
                android:id="@+id/make_moim_select_date_tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/make_moim_select_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_moim_time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />

            <Button
                android:id="@+id/make_moim_select_time_btn"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_base_main_stroke_btn"

                android:text="9시 ~ 18시"
                android:textSize="16sp"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/make_moim_setting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_moim_setting"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/make_moim_complete_btn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/make_moim"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/bg_base_main_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>