<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_base"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TextView
            android:id="@+id/dialog_join_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/main_join_moim"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/dialog_join_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/dialog_join_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_join_moimIdx_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/join_moimIdx"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="5dp"
                android:includeFontPadding="false"
                />

            <EditText
                android:id="@+id/dialog_join_moimIdx_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/join_moim_info"
                android:textSize="18sp"
                android:textColor="@color/darkGray"
                android:includeFontPadding="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_join_moimPw_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/join_moimPw"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="5dp"
                android:includeFontPadding="false"
                />

            <EditText
                android:id="@+id/dialog_join_moimPw_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/join_moim_info"
                android:textSize="18sp"
                android:textColor="@color/darkGray"
                android:includeFontPadding="false"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_join_ok_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_base_ok"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/bg_dialog_base_ok_btn"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>