<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/moim_personal_quarter_circle"
        android:layout_width="176dp"
        android:layout_height="144dp"
        android:src="@drawable/left_top_quarter_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moim_personal_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/moim_personal_quarter_circle">
        <TextView
            android:id="@+id/moim_personal_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="내 시간표"
            android:fontFamily="@font/notosans_kr_bold"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="29sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/moim_personal_complete_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_base_main_btn"
            android:gravity="center"
            android:text="@string/complete"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginRight="13dp"
            app:layout_constraintTop_toBottomOf="@+id/moim_personal_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:visibility="invisible"
            android:id="@+id/moim_personal_load_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/bg_base_main_btn"
            android:text="@string/personal_load"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toTopOf="@+id/moim_personal_complete_btn"
            app:layout_constraintRight_toLeftOf="@+id/moim_personal_complete_btn"
            />

        <TextView
            android:id="@+id/moim_personal_notice_tv"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/personal_notice"
            android:fontFamily="@font/notosans_kr_bold"
            android:includeFontPadding="false"
            android:textColor="@color/darkGray"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/moim_personal_complete_btn"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/moim_personal_schedule_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/moim_personal_bottomBar_layout"
        app:layout_constraintTop_toBottomOf="@id/moim_personal_toolbar_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

<!--        class="com.legends.moim.src.groupMoim.PersonalScheduleFragment"-->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/moim_personal_schedule_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintBottom_toTopOf="@+id/moim_personal_bottomBar_layout"
            app:layout_constraintTop_toBottomOf="@id/moim_personal_toolbar_layout" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moim_personal_reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_personal_reset_btn"
        android:layout_margin="5dp"
        android:elevation="10dp"

        android:text="@string/personal_reset"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_kr_bold"
        android:includeFontPadding="false"

        app:layout_constraintBottom_toTopOf="@id/moim_personal_bottomBar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/moim_personal_bottomBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="5dp"
        android:background="@color/moim_main_1"
        android:padding="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="9dp"

            android:text="@string/personal_choice"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:fontFamily="@font/notosans_kr_bold"
            android:includeFontPadding="false"/>

        <LinearLayout
            android:id="@+id/moim_personal_choice_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:background="@drawable/bg_personal_choice_layout">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foregroundGravity="center"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/moim_personal_like_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/bg_schedule_choice1_like_btn"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/moim_personal_possible_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/bg_schedule_choice2_possible_btn"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foregroundGravity="center"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/moim_personal_dislike_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/bg_schedule_choice3_dislike_btn"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foregroundGravity="center"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/moim_personal_impossible_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/bg_schedule_choice4_impossible_btn"
                    />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/choice_like"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/choice_possible"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/choice_dislike"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/choice_impossible"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>