<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_base"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/dialog_participants_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participants_title"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dialog_participants_message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants_no_msg"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_participants_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_participants_ok_btn_tv"
            app:drawableTopCompat="@null" />

        <GridLayout
            android:id="@+id/dialog_participants_gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="3"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_participants_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_participants_ok_btn_tv">

        </GridLayout>

        <TextView
            android:id="@+id/dialog_participants_ok_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_base_ok"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/bg_dialog_base_ok_btn"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_participants_message_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>